--- a/Draughts/Draughts/Properties/Resources.resx
+++ b/Draughts/Draughts/Properties/Resources.resx
@@ -121,4 +121,16 @@
   <data name="background" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="black_king" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\black_king.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="black_pawn" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\black_pawn.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="white_king" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\white_king.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="white_pawn" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\white_pawn.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
