--- a/Draughts/Draughts/Properties/Resources.resx
+++ b/Draughts/Draughts/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="black_pawn" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\black_pawn.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="field" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\field.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="white_king" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\white_king.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
